--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,11 @@
 {{ end }}
 
 <article>
-  <header><h1>{{ .Title | default "Posts" }}</h1></header>
+  {{ if .IsHome }}
+    <div>{{ .Description }}</div>
+  {{ else }}
+    <header><h1>{{ .Title | default "Posts" }}</h1></header>
+  {{ end }}
   <ul class="archive">
     {{- range $Pages }}
     <li>
